added style and onClick callback to candidate

--- a/frontend/src/app/modules/voting/components/candidate/candidate.template.html
+++ b/frontend/src/app/modules/voting/components/candidate/candidate.template.html
@@ -1,11 +1,13 @@
-<div class="candidate">
-    <div class="row">
-        <div class="col-sm-6">
-            <img class="img-responsive img-circle" ng-src="{{vm.candidate.image}}">
-        </div>
-        <div class="col-sm-6">
-            <p>{{vm.candidate.firstname}}</p>
-            <p>{{vm.candidate.lastname}}</p>
+<div class="panel panel-default candidate" ng-click="vm.click()">
+    <div class="panel-body">
+        <div class="row">
+            <div class="col-sm-4">
+                <img class="img-responsive img-circle" ng-src="{{vm.candidate.image}}">
+            </div>
+            <div class="col-sm-8">
+                <p>{{vm.candidate.firstname}}</p>
+                <p>{{vm.candidate.lastname}}</p>
+            </div>
         </div>
     </div>
 </div>
