--- a/frontend/src/app/modules/voting/voting.template.html
+++ b/frontend/src/app/modules/voting/voting.template.html
@@ -1,1 +1,1 @@
-<candidate candidate="vm.candidates[0]"></candidate>
+<candidate candidate="vm.candidates[0]" on-click="vm.onCandidateClick(candidate)"></candidate>
