--- a/frontend/src/app/modules/main/components/top-navbar/top-navbar.template.html
+++ b/frontend/src/app/modules/main/components/top-navbar/top-navbar.template.html
@@ -47,6 +47,9 @@
                         <li><a href="#">Separated link</a></li>
                     </ul>
                 </li>
+                <li>
+                    <facebook-login></facebook-login>
+                </li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
